# Opt_SquareRemover

./: .gitignore  CMakeLists.txt  README.md  combinations.cpp  idea.txt
DerivedData/SquareRemover/: info.plist
DerivedData/SquareRemover/Index/Debug/macosx10.9-x86_64/SquareRemover.xcindex/: db.xcindexdb-shm  db.xcindexdb-wal
SquareRemover/: SquareRemover.1  main.cpp
SquareRemover.xcodeproj/: project.pbxproj
SquareRemover.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SquareRemover.xcodeproj/xcuserdata/antoshkaplus.xcuserdatad/xcschemes/: SquareRemover.xcscheme  xcschememanagement.plist
app/: app.cpp  main_template.cpp  methods.cpp  offline.cpp  opt.cpp  test.cpp  tester.cpp  tester_template.cpp
benchmark/: beam_search.cpp  main_benchmark.cpp
docs/: ideas.txt  perf.txt  res.txt
include/: balance.h  balance.hpp  base.h  base.hpp  beam_search.hpp  beam_search_2.hpp  beam_search_v2.hpp  board.hpp  board_2.hpp  board_naive.hpp  board_new.hpp  board_restore.hpp  board_simulation.hpp  board_state.hpp  board_state_v2.hpp  board_test.hpp  calc_board.hpp  combinations.hpp  factors.hpp  four_move.h  four_move.hpp  four_move_old.hpp  greedy.hpp  hashed_board.hpp  local_sq_rm.hpp  local_sq_rm_v1.hpp  local_sq_rm_v2.hpp  local_sq_rm_v3.hpp  local_square_remover.hpp  location.hpp  naive.hpp  optimizer.hpp  optimizer_v2.hpp  play.hpp  play_factory.hpp  score.hpp  score_calc.hpp  square_remover.hpp  state_2_sq.hpp  state_2_sq_v2.hpp  (+8 more)
include/bit/: board.hpp  board_hashed.hpp  locator.hpp
include/digit/: board.hpp  board_hashed.hpp  locator.hpp
include/play/: deriv.hpp  play_v1.hpp  play_v2.hpp  play_v3.hpp
include/state/: state_2_sq.hpp  state_2_sq_v2.hpp  state_adj.hpp  state_double.hpp  state_sq.hpp  state_triple.hpp
others/: nika.cpp  psyho.cpp  tanzaku.cpp  wrong.cpp
scripts/: rank.py  run.py  score.py  solver.py  stats.py
src/: balance.cpp  base.cpp  board.cpp  four_move.cpp  main.cpp  stingy.cpp  util.cpp  wide.cpp
submit/: v_1.cpp
temp/: stats.txt
test/: ans.txt  ideas.txt  main.cpp  solver.py  stats.txt  test.py
unittest/: board_restore.cpp  local_sq_rm.cpp  locator.cpp  main.cpp  state_sq.cpp
